{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 215,
  "lineage": "f4940746-3a8b-60e8-82b3-5dc11b4a51d2",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "az-fw-dummy-lan-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.80/28",
            "address_prefixes": [
              "10.0.0.80/28"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/av-gw-az-transit-firenet-dmz-firewall-lan",
            "name": "av-gw-az-transit-firenet-dmz-firewall-lan",
            "resource_group_name": "az-avtx-rg",
            "route_table_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/routeTables/av-gw-az-transit-firenet-dmz-firewall-lan",
            "virtual_network_name": "az-transit-firenet-vnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "az-fw-dummy-mgmt-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.32/28",
            "address_prefixes": [
              "10.0.0.32/28"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/az-transit-firenet-vnet-Public-gateway-and-firewall-mgmt-1",
            "name": "az-transit-firenet-vnet-Public-gateway-and-firewall-mgmt-1",
            "resource_group_name": "az-avtx-rg",
            "route_table_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/routeTables/aviatrix-az-transit-firenet-vnet-gw_rtb",
            "virtual_network_name": "az-transit-firenet-vnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "az-fw-dummy-wan-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/28",
            "address_prefixes": [
              "10.0.0.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/az-transit-firenet-vnet-Public-FW-ingress-egress-1",
            "name": "az-transit-firenet-vnet-Public-FW-ingress-egress-1",
            "resource_group_name": "az-avtx-rg",
            "virtual_network_name": "az-transit-firenet-vnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "az-fw-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "guid": "2fac926f-0e52-421c-b166-d65f35e83f88",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet",
            "location": "eastus2",
            "name": "az-transit-firenet-vnet",
            "resource_group_name": "az-avtx-rg",
            "subnets": [
              "az-transit-firenet-vnet-Public-FW-ingress-egress-1",
              "az-transit-firenet-vnet-Public-FW-ingress-egress-2",
              "av-gw-az-transit-firenet-vng-traffic",
              "az-transit-firenet-vnet-Public-gateway-and-firewall-mgmt-1",
              "AzureFirewallSubnet",
              "AzureFirewallManagementSubnet",
              "av-gw-az-transit-firenet-dmz-firewall",
              "av-gw-az-transit-firenet-dmz-firewall-lan",
              "az-transit-firenet-vnet-Public-gateway-and-firewall-mgmt-2",
              "av-gw-az-transit-firenet-hagw-dmz-firewall",
              "av-gw-az-transit-firenet-hagw-dmz-firewall-lan"
            ],
            "tags": {
              "Aviatrix-Created-Resource": "Do-Not-Delete-Aviatrix-Created-Resource",
              "Name": "az-transit-firenet-vnet"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "az-fw-pol",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "proxy_enabled": true,
                "servers": []
              }
            ],
            "firewalls": [
              "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/azureFirewalls/az-fw"
            ],
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/firewallPolicies/az-fw-pol",
            "identity": [],
            "insights": [
              {
                "default_log_analytics_workspace_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.OperationalInsights/workspaces/az-fw-law",
                "enabled": true,
                "log_analytics_workspace": [],
                "retention_in_days": 30
              }
            ],
            "intrusion_detection": [
              {
                "mode": "Alert",
                "signature_overrides": [],
                "traffic_bypass": []
              }
            ],
            "location": "eastus2",
            "name": "az-fw-pol",
            "private_ip_ranges": [],
            "resource_group_name": "az-avtx-rg",
            "rule_collection_groups": [
              "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/firewallPolicies/az-fw-pol/ruleCollectionGroups/Allow-RFC1918-RCG"
            ],
            "sku": "Premium",
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_log_analytics_workspace.az-fw-law",
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "az-fw-pol-rcg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/firewallPolicies/az-fw-pol",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/firewallPolicies/az-fw-pol/ruleCollectionGroups/Allow-RFC1918-RCG",
            "name": "Allow-RFC1918-RCG",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "az-fw-network-rc",
                "priority": 100,
                "rule": [
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "Allow-RFC1918",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "10.0.0.0/8",
                      "172.16.0.0/12",
                      "192.168.0.0/16"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.az-fw-pol",
            "azurerm_log_analytics_workspace.az-fw-law",
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az-fw-dummy-lan-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkInterfaces/az-fw-dummy-lan-nic",
            "internal_domain_name_suffix": "n4jkyl0sbyoefmlg0zptl0b5ra.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az-fw-dummy-lan-nic",
                "primary": true,
                "private_ip_address": "10.0.0.84",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/av-gw-az-transit-firenet-dmz-firewall-lan"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-7E-08-3E",
            "name": "az-fw-dummy-lan-nic",
            "private_ip_address": "10.0.0.84",
            "private_ip_addresses": [
              "10.0.0.84"
            ],
            "resource_group_name": "az-avtx-rg",
            "virtual_machine_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Compute/virtualMachines/az-fw"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_transit_gateway.az-firenet-gw",
            "aviatrix_vpc.az-vpcs",
            "azurerm_resource_group.az-rg",
            "data.azurerm_subnet.az-fw-dummy-lan-snet",
            "data.azurerm_virtual_network.az-fw-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az-fw-dummy-mgmt-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkInterfaces/az-fw-dummy-mgmt-nic",
            "internal_domain_name_suffix": "n4jkyl0sbyoefmlg0zptl0b5ra.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az-fw-dummy-mgmt-nic",
                "primary": true,
                "private_ip_address": "10.0.0.37",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-fw-dummy-mgmt-pip",
                "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/az-transit-firenet-vnet-Public-gateway-and-firewall-mgmt-1"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-7E-08-8A",
            "name": "az-fw-dummy-mgmt-nic",
            "private_ip_address": "10.0.0.37",
            "private_ip_addresses": [
              "10.0.0.37"
            ],
            "resource_group_name": "az-avtx-rg",
            "virtual_machine_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Compute/virtualMachines/az-fw"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_transit_gateway.az-firenet-gw",
            "aviatrix_vpc.az-vpcs",
            "azurerm_public_ip.az-fw-dummy-mgmt-pip",
            "azurerm_resource_group.az-rg",
            "data.azurerm_subnet.az-fw-dummy-mgmt-snet",
            "data.azurerm_virtual_network.az-fw-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az-fw-dummy-wan-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkInterfaces/az-fw-dummy-wan-nic",
            "internal_domain_name_suffix": "n4jkyl0sbyoefmlg0zptl0b5ra.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az-fw-dummy-wan-nic",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-fw-dummy-wan-pip",
                "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/az-transit-firenet-vnet-Public-FW-ingress-egress-1"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-7E-09-E1",
            "name": "az-fw-dummy-wan-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "az-avtx-rg",
            "virtual_machine_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Compute/virtualMachines/az-fw"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_transit_gateway.az-firenet-gw",
            "aviatrix_vpc.az-vpcs",
            "azurerm_public_ip.az-fw-dummy-wan-pip",
            "azurerm_resource_group.az-rg",
            "data.azurerm_subnet.az-fw-dummy-wan-snet",
            "data.azurerm_virtual_network.az-fw-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az-jumpbox-vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkInterfaces/az-jumpbox-vm-nic",
            "internal_domain_name_suffix": "5acrkglvff1upcfz3ayly0r1kc.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az-jumpbox-vm-nic-ipcfg",
                "primary": true,
                "private_ip_address": "10.10.0.196",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-jumpbox-vm-pip",
                "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-spoke1-vnet/subnets/az-spoke1-vnet-Public-subnet-2"
              }
            ],
            "location": "eastus2",
            "mac_address": "60-45-BD-7A-F5-CA",
            "name": "az-jumpbox-vm-nic",
            "private_ip_address": "10.10.0.196",
            "private_ip_addresses": [
              "10.10.0.196"
            ],
            "resource_group_name": "az-avtx-rg",
            "virtual_machine_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Compute/virtualMachines/az-jumpbox-vm"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_vpc.az-vpcs",
            "azurerm_public_ip.az-jumpbox-vm-pip",
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az-spoke1-priv-vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkInterfaces/az-spoke1-priv-vm-nic",
            "internal_domain_name_suffix": "5acrkglvff1upcfz3ayly0r1kc.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az-spoke1-priv-vm-nic-ipcfg",
                "primary": true,
                "private_ip_address": "10.10.0.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-spoke1-vnet/subnets/az-spoke1-vnet-Private-subnet-1"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-7A-68-01",
            "name": "az-spoke1-priv-vm-nic",
            "private_ip_address": "10.10.0.132",
            "private_ip_addresses": [
              "10.10.0.132"
            ],
            "resource_group_name": "az-avtx-rg",
            "virtual_machine_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Compute/virtualMachines/az-spoke1-priv-vm"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_vpc.az-vpcs",
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "az-jumpbox-vm-nsg-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkInterfaces/az-jumpbox-vm-nic|/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkSecurityGroups/az-jumpbox-vm-nsg",
            "network_interface_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkInterfaces/az-jumpbox-vm-nic",
            "network_security_group_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkSecurityGroups/az-jumpbox-vm-nsg"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_vpc.az-vpcs",
            "azurerm_network_interface.az-jumpbox-vm-nic",
            "azurerm_network_security_group.az-jumpbox-vm-nsg",
            "azurerm_public_ip.az-jumpbox-vm-pip",
            "azurerm_resource_group.az-rg",
            "data.http.get_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "az-jumpbox-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/networkSecurityGroups/az-jumpbox-vm-nsg",
            "location": "eastus2",
            "name": "az-jumpbox-vm-nsg",
            "resource_group_name": "az-avtx-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-home-access",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "162.200.142.9/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.az-rg",
            "data.http.get_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az-fw-dummy-mgmt-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-fw-dummy-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.149.215",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-fw-dummy-mgmt-pip",
            "resource_group_name": "az-avtx-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az-fw-dummy-wan-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-fw-dummy-wan-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.150.22",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-fw-dummy-wan-pip",
            "resource_group_name": "az-avtx-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az-fw-mgmt-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-fw-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.149.220",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-fw-mgmt-pip",
            "resource_group_name": "az-avtx-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az-fw-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-fw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.151.24",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-fw-pip",
            "resource_group_name": "az-avtx-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az-jumpbox-vm-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/publicIPAddresses/az-jumpbox-vm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.148.101",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-jumpbox-vm-pip",
            "resource_group_name": "az-avtx-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "az-aks-agic-snet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/routeTables/az-aks-cluster-agic-rt",
            "location": "eastus2",
            "name": "az-aks-cluster-agic-rt",
            "resource_group_name": "az-aks-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-rt",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "10.0.0.0/8",
                "name": "az-aks-cluster-gw-10.0.0.0-8",
                "next_hop_in_ip_address": "10.20.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.16.0.0/12",
                "name": "az-aks-cluster-gw-172.16.0.0-12",
                "next_hop_in_ip_address": "10.20.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.0.0/16",
                "name": "az-aks-cluster-gw-192.168.0.0-16",
                "next_hop_in_ip_address": "10.20.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-agic-snet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.az-aks-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "az-aks-snet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/routeTables/az-aks-cluster-rt",
            "location": "eastus2",
            "name": "az-aks-cluster-rt",
            "resource_group_name": "az-aks-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "aviatrix-route-0.0.0.0-0",
                "next_hop_in_ip_address": "10.20.1.132",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.0.0/8",
                "name": "az-aks-cluster-gw-10.0.0.0-8",
                "next_hop_in_ip_address": "10.20.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.16.0.0/12",
                "name": "az-aks-cluster-gw-172.16.0.0-12",
                "next_hop_in_ip_address": "10.20.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.0.0/16",
                "name": "az-aks-cluster-gw-192.168.0.0-16",
                "next_hop_in_ip_address": "10.20.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-snet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.az-aks-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "az-fw-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/routeTables/az-fw-rt",
            "location": "eastus2",
            "name": "az-fw-rt",
            "resource_group_name": "az-avtx-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-rt",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/AzureFirewallSubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az-aks-agic-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.2.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-agic-snet",
            "name": "az-aks-cluster-agic-snet",
            "resource_group_name": "az-aks-rg",
            "virtual_network_name": "az-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az-aks-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-snet",
            "name": "az-aks-cluster-snet",
            "resource_group_name": "az-aks-rg",
            "virtual_network_name": "az-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az-avtx-egress-gw-snets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-egress-gw-snet-1",
            "name": "avx-egress-gw-snet-1",
            "resource_group_name": "az-aks-rg",
            "virtual_network_name": "az-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-egress-gw-snet-2",
            "name": "avx-egress-gw-snet-2",
            "resource_group_name": "az-aks-rg",
            "virtual_network_name": "az-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az-avtx-gw-snets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-gw-snet-1",
            "name": "avx-gw-snet-1",
            "resource_group_name": "az-aks-rg",
            "virtual_network_name": "az-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-gw-snet-2",
            "name": "avx-gw-snet-2",
            "resource_group_name": "az-aks-rg",
            "virtual_network_name": "az-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az-fw-mgmt-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "resource_group_name": "az-avtx-rg",
            "virtual_network_name": "az-transit-firenet-vnet"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_vpc.az-vpcs",
            "azurerm_resource_group.az-rg",
            "data.azurerm_virtual_network.az-fw-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az-fw-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "az-avtx-rg",
            "virtual_network_name": "az-transit-firenet-vnet"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_vpc.az-vpcs",
            "azurerm_resource_group.az-rg",
            "data.azurerm_virtual_network.az-fw-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "az-aks-agic-rt-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-agic-snet",
            "route_table_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/routeTables/az-aks-cluster-agic-rt",
            "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-agic-snet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_route_table.az-aks-agic-snet-rt",
            "azurerm_subnet.az-aks-agic-snet",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "az-aks-rt-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-snet",
            "route_table_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/routeTables/az-aks-cluster-rt",
            "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-snet"
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg",
            "azurerm_route_table.az-aks-snet-rt",
            "azurerm_subnet.az-aks-snet",
            "azurerm_virtual_network.az-aks-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "az-fw-rt-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/AzureFirewallSubnet",
            "route_table_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/routeTables/az-fw-rt",
            "subnet_id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-avtx-rg/providers/Microsoft.Network/virtualNetworks/az-transit-firenet-vnet/subnets/AzureFirewallSubnet"
          },
          "dependencies": [
            "aviatrix_account.az_account",
            "aviatrix_vpc.az-vpcs",
            "azurerm_resource_group.az-rg",
            "azurerm_route_table.az-fw-rt",
            "azurerm_subnet.az-fw-snet",
            "data.azurerm_virtual_network.az-fw-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az-aks-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "606fe6ca-8f35-4bbf-a0ef-cdd44109b12a",
            "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet",
            "location": "eastus2",
            "name": "az-aks-vnet",
            "resource_group_name": "az-aks-rg",
            "subnet": [
              {
                "address_prefix": "10.20.0.0/24",
                "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-snet",
                "name": "az-aks-cluster-snet"
              },
              {
                "address_prefix": "10.20.1.0/26",
                "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-gw-snet-1",
                "name": "avx-gw-snet-1"
              },
              {
                "address_prefix": "10.20.1.128/26",
                "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-egress-gw-snet-1",
                "name": "avx-egress-gw-snet-1"
              },
              {
                "address_prefix": "10.20.1.192/26",
                "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-egress-gw-snet-2",
                "name": "avx-egress-gw-snet-2"
              },
              {
                "address_prefix": "10.20.1.64/26",
                "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/avx-gw-snet-2",
                "name": "avx-gw-snet-2"
              },
              {
                "address_prefix": "10.20.2.0/26",
                "id": "/subscriptions/6c4e9574-4336-4d6d-925c-64687d7d97d6/resourceGroups/az-aks-rg/providers/Microsoft.Network/virtualNetworks/az-aks-vnet/subnets/az-aks-cluster-agic-snet",
                "name": "az-aks-cluster-agic-snet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.az-aks-rg"
          ]
        }
      ]
    }
  ]
}